--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "tpmobile",
-    "short_name": "tpmobile",
+    "name": "film",
+    "short_name": "film",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
