--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "tpmobile" "\0"
+            VALUE "FileDescription", "film" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "tpmobile" "\0"
+            VALUE "InternalName", "film" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2022 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "tpmobile.exe" "\0"
-            VALUE "ProductName", "tpmobile" "\0"
+            VALUE "OriginalFilename", "film.exe" "\0"
+            VALUE "ProductName", "film" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
